# capstone

./: .gitignore
3B/362 Stuff/Misc-Notes/: notes for the  future_.docx
3B/362 Stuff/Presentations/: Presentation 3 Script.docx  Presentation Round 1_.docx
3B/362 Stuff/Reports/: Final Report - Design Project Brief.docx  Preliminary Report - Needs Identification and Scientific Review.docx
3B/Presentation/: Presentation 2.docx  Presentation Round 1_.docx
docs/3B/Elevator Pitch/: Elevator Pitch.docx
docs/3B/Foundational Docs/: Capstone Team & Problem Space (UP TO DATE)_.docx  Contract Draft.docx  Ideation.docx
docs/3B/Presentation/: BME 362 Presentation #1.pptx  BME 362 Presentation 2.pptx
docs/winter-2025/: data-sources.txt
fw/gateway_research/: README.md  setup.md
gateway_research/: README.md
gateway_research/deploy/: README.md  configure_env.sh
gateway_research/gateway/: __init__.py  audio_types.py  main.py  newBLEApproach.md
gateway_research/local/: docker-compose.yml  run-docker-image.sh
ml/: README.md  pyproject.toml
ml/configs/: default.yaml
ml/falldet/data/: dataset.py  preprocessing.py  registry.py  unified.py
ml/falldet/data/loaders/: microchip.py  nhoyh.py
ml/falldet/evaluation/: metrics.py
ml/falldet/models/: cnn1d.py  factory.py
ml/falldet/tracking/: logger.py
ml/falldet/training/: losses.py  trainer.py
ml/falldet/utils/: config.py  device.py  seed.py
ml/notebooks/: README.md  build_notebooks.py  fall_detection_inference_demo.ipynb  fall_detection_train.ipynb
ml/scripts/: download_data.py  train.py
(+272 files in other folders)
